--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "GPL-3.0",
   "authors": ["Ryan Florence", "Michael Jackson"],
   "scripts": {
-    "build": "node ./scripts/build.js",
+    "postinstall": "node ./scripts/build.js",
     "start":
       "webpack-dev-server --inline --content-base subjects",
     "server-exercise":
